2010-02-07  Yves Blusseau  <blusseau@zetam.org>

    * gnulib/getdelim.c: add missing header (type ssize_t must be defined).

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix warnings in grub-emu when compiling with maximum warning options.

	* util/grub-emu.c (ENABLE_RELOCATABLE): New definition.
	(grub_arch_modules_addr): Return 0 and not NULL.
	* util/misc.c (ENABLE_RELOCATABLE): New definition.
	(xstrdup): Use newstr instead of dup.
	* util/hostdisk.c (grub_util_biosdisk_get_grub_dev): Rename one instance
	of disk to dsk to avoid shadowing.
	(find_free_slot): Fix prototype.
	* util/getroot.c (grub_util_is_dmraid): Make static.
	* include/grub/time.h (grub_get_rtc) [GRUB_MACHINE_EMU || GRUB_UTIL]:
	Add missing prototype.
	* util/sdl.c (grub_video_sdl_set_viewport): Remove.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/i386/linux.c (grub_linux_setup_video): Handle error
	appropriately.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* fs/reiserfs.c (grub_reiserfs_read): Use #if 0 instead of commenting
	code out.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/cache.h (grub_arch_sync_caches) [i386 || x86_64]: Inline.
	* kern/i386/coreboot/init.c (grub_arch_sync_caches): Remove.
	* kern/i386/efi/init.c (grub_arch_sync_caches): Likewise.
	* kern/i386/ieee1275/init.c (grub_arch_sync_caches): Likewise.
	* kern/i386/pc/init.c (grub_arch_sync_caches): Likewise.
	* util/misc.c (grub_arch_sync_caches) [i386 || x86_64]: Likewise.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/err.h (grub_err_printf): Don't export.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/dl.h (grub_dl_register_symbol): Don't export.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/i18n.h (grub_gettext_dummy): Removed.
	* kern/misc.c (grub_gettext_dummy): Make static.

2010-02-06  Vladimir Serbinenko  <phcoder@gmail.com>
